@@ -1,5 +1,10 @@
 #Nmap Changelog ($Id$); -*-text-*-
 
+o [GH#2899] When IP protocol scanning on IPv6 (-sO -6), skip protocol numbers
+  that are registered as Extension Header values. When the --data option was
+  used, these would fail the assertion "len == (u32) ntohs(ip6->ip6_plen)"
+  [Daniel Miller]
+
 o [NSE][GH#3133] Fix the error "nse_nsock.cc:637: void receive_callback(nsock_pool, nsock_event, void*): Assertion `lua_status(L) == 1' failed."
   when reading from an SSL connection. [Daniel Miller]
 
